--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,20 @@
 version: '3'
 services:
-    mongo:
-        image: mongo
-        ports:
-            - '27017:27017'
     api:
         build: .
         ports:
           - "3000:3000"
         depends_on:
           - mongo
+          - redis
         volumes:
           - ./:/usr/src/app
           - /usr/src/app/node_modules
+    mongo:
+        image: mongo
+        ports:
+            - '27017:27017'
+    redis:
+        image: redis
+        ports:
+            - '6379:6379'
