--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-validator": "^6.1.1",
+    "firebase-admin": "^8.5.0",
     "http-errors": "~1.6.3",
+    "ibm-watson": "^4.4.0",
     "mongoose": "^5.6.4",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
