--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.1.0",
     "express": "~4.16.1",
     "express-validator": "^6.1.1",
     "firebase-admin": "^8.5.0",
